# ChessAI

./: .gitignore  CMakeLists.txt  Chess-Controller.cpp  Chess-Model.h  Chess-Test.cpp  Chess-View.cpp  README.md  catch_amalgamated.hpp
include/: Chess-Model.h  utilities.h
src/: Chess-Controller.cpp  Chess-View.cpp
test/: Chess-Test.cpp  catch_amalgamated.cpp
